Trying to fix bootstrap columns and animation on iOS

--- a/portfolio.css
+++ b/portfolio.css
@@ -23,8 +23,8 @@ max-width: 2160px;
 }
 
 @-webkit-keyframes animateJet{
-    from {background-size:20px,0px;background-position: 50% 10%, 50% 100%;}
-    to {background-size: 700px,1000px;background-position: 50% 5.5%, 50% 0%;}
+    0% {background-size:20px,0px;background-position: 50% 10%, 50% 100%;}
+    100% {background-size: 700px,1000px;background-position: 50% 5.5%, 50% 0%;}
 }
 
 .navbar {
